[tool.poetry]
name = "krpc-cv-py"
version = "0.1.0"
description = ""
authors = ["Mushfiqur Rahman <realmrahman.19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
opencv-python = "4.5.3.x"
opencv-contrib-python = "4.5.3.x"
matplotlib = "3.7.x"
imutils = "^0.5.4"

[tool.poetry.scripts]
parseImg = "krpc_cv_py.main:main"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
